--- a/packages/ui-components/src/ScrollCard.scss
+++ b/packages/ui-components/src/ScrollCard.scss
@@ -3,13 +3,9 @@
   justify-content: space-between;
 }
 
-.aca-scroll-card__container {
-  display: flex;
-}
-
 .aca-scroll-card__content {
-  overflow-y: auto;
-  margin-bottom: 4px;
+  width: calc(100% - 48px);
+  margin: 0 24px 4px 24px;
 
   &::-webkit-scrollbar {
     height: 4px;
@@ -24,4 +20,10 @@
   &::-webkit-scrollbar-track {
     color: green;
   }
+}
+
+.aca-scroll-card__container {
+  width: 0;
+  display: flex;
+  flex-wrap: nowrap;
 }
