--- a/packages/page-wallet/src/components/UserCard.module.scss
+++ b/packages/page-wallet/src/components/UserCard.module.scss
@@ -19,8 +19,10 @@
   }
 
   .name {
-    display: flex;
-    align-items: center;
+    width: 160px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     font-size: 20px;
     line-height: 24px;
     font-weight: 500;
