--- a/packages/page-wallet/src/components/WalletBalance.module.scss
+++ b/packages/page-wallet/src/components/WalletBalance.module.scss
@@ -1,14 +1,18 @@
+@import '../../../ui-components/src/styles/index.scss';
+
 .root {
   margin: -24px -24px 0 0;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   flex-wrap: wrap;
+
+  @include media-breakpoint-up('sm') {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 .item {
-  flex: left;
   box-sizing: border-box;
-  max-width: 357px;
-  min-width: 357px;
   height: 152px;
   margin: 24px 24px 0 0;
   padding: 24px;
@@ -25,7 +29,9 @@
 }
 
 .totalAsset {
-  background: url('../assets/total-assets-bg.svg') 0 0/100% 100% no-repeat;
+  background-image: url('../assets/total-assets-bg.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
   font-size: 16px;
   line-height: 24px;
   color: #ffffff;
