--- a/packages/react-components/src/WalletBalance.module.scss
+++ b/packages/react-components/src/WalletBalance.module.scss
@@ -12,17 +12,19 @@
 
 .item {
   flex: 0 0 20%;
+  display: flex;
+  align-items: stretch;
   border-right: 1px solid #ecf0f2; 
   margin-top: 48px;
+  padding: 0 24px;
 
-  .inner {
-    display: flex;
-    align-items: stretch;
-    padding: 0 24px;
+  &:first-child {
+    padding-left: 0;
   }
 
   &:last-child {
     border-right: none;
+    padding-right: 0;
   }
 
   .image {
