--- a/packages/react-components/src/BalanceInput.module.scss
+++ b/packages/react-components/src/BalanceInput.module.scss
@@ -1,10 +1,17 @@
 .root {
   position: relative;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 100px;
   align-items: stretch;
   padding-left: 16px;
   transition: all 300ms cubic-bezier(0.0, 0, 0.2, 1);
   border-radius: 2px;
+
+  &.disabled {
+    input {
+      background-color: #ffffff !important;
+    }
+  }
 
   &.middle {
     height: 48px;
@@ -12,6 +19,18 @@
 
   &.large {
     height: 58px;
+
+    .token {
+      font-size: 24px;
+    }
+  }
+
+  &.small {
+    height: 48px;
+
+    .token {
+      font-size: 16px;
+    }
   }
 
   &.hover:hover, &.focused {
@@ -26,28 +45,27 @@
     border: 1px solid #E9E9E9;
   }
 
-  .input {
-    width: 60%;
-    flex: 1 1 60%;
-    padding-right: 16px;
-    font-size: 24px;
-    line-height: 29px;
-    font-weight: 600;
-    color: #333333;
+  &.showIcon {
+    grid-template-columns: 1fr 160px;
+  }
 
-    // clear default apperance
-    appearance: none;
-    box-shadow: none;
-    outline: none;
-    border: none;
+  &.showMax {
+    grid-template-columns: 1fr 64px 100px;
+  }
+
+  &.showMax.showIcon {
+    grid-template-columns: 1fr 64px 160px;
+  }
+
+  .input {
+    height: calc(100% - 2px);
+    padding-right: 16px;
+    color: #333333;
   }
 
   .tokenSelector {
-    flex-grow: 0;
-    flex-shrink: 0;
     border: none !important;
     height: auto;
-    width: 50%;
     border-left: 1px solid #E9E9E9 !important;
     border-radius: 0 !important;
 
@@ -56,7 +74,7 @@
     }
 
     &.showIcon {
-      max-width: 180px;
+      max-width: 160px;
     }
 
     &.left {
@@ -67,28 +85,30 @@
   }
 
   .token {
-    margin: 14.5px 0;
-    padding-right:  24px;
-    flex-grow: 0;
-    flex-shrink: 0;
     display: flex;
     align-items: center;
+    padding: 0 12px;
     border-left: 1px solid #E9E9E9;
-    font-size: 24px;
-    line-height: 29px;
-    color: #333333;
+    font-size: 16px;
+    line-height: 19px;
+    color: var(--color-primary);
+    overflow: hidden;
 
-     > img {
-       margin: 0 16px;
-       width: 24px;
-       height: 24px;
-     }
+    &.showIcon {
+      max-width: 160px;
+    }
+
+    > img {
+      margin-right: 16px;
+      width: 24px;
+      height: 24px;
+    } 
   }
 
   .maxBtn {
+    height: 0 !important;
     min-width: 0 !important;
     height: auto !important;
-    padding: 0 24px !important;
     font-size: 16px;
     line-height: 19px;
     font-weight: bold;
