--- a/packages/ui-components/src/Dropdown.module.scss
+++ b/packages/ui-components/src/Dropdown.module.scss
@@ -2,7 +2,6 @@
 
 .root {
   position: relative;
-  width: 260px;
   height: 64px;
   transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
   font-weight: 500;
@@ -75,7 +74,7 @@
     display: flex;
     align-items: center;
     flex: 1;
-    padding: 0 12px;
+    padding: 0 0 0 12px;
     font-size: 16px;
     line-height: 19px;
     color: $color-primary;
