--- a/packages/ui-components/src/Tabs.scss
+++ b/packages/ui-components/src/Tabs.scss
@@ -16,6 +16,7 @@
   & .aca-tabs__tab {
     cursor: pointer;
     transition: all 300ms cubic-bezier(0.0, 0, 0.2, 1);
+    background: #ffffff;
 
     &.disabled {
       filter: grayscale(1) opacity(0.65);
