--- a/packages/page-loan-charts/src/components/TotalDebitAndCollateral.module.scss
+++ b/packages/page-loan-charts/src/components/TotalDebitAndCollateral.module.scss
@@ -28,6 +28,6 @@
     display: block;
     margin-top: 4px;
     font-size: 12px;
-    color: #999999;
+    color: var(--text-color-second);
   }
 }
