--- a/packages/page-wallet/src/components/UserCard.module.scss
+++ b/packages/page-wallet/src/components/UserCard.module.scss
@@ -26,7 +26,7 @@
     font-size: 20px;
     line-height: 24px;
     font-weight: 500;
-    color: #333333;
+    color: var(--text-color-primary);
 
     > button {
       min-width: 0;
@@ -38,7 +38,7 @@
     margin-top: 14px;
     font-size: 14px;
     line-height: 16px;
-    color: #999999;
+    color: var(--text-color-second);
   }
 
   .edit, .copy {
