--- a/packages/react-components/src/Token.module.scss
+++ b/packages/react-components/src/Token.module.scss
@@ -21,7 +21,7 @@
   .fullname {
     font-size: 14px;
     line-height: 21px;
-    color: #999999;
+    color: var(--text-color-second);
     white-space: nowrap;
   }
 }
