--- a/packages/ui-components/src/Page.scss
+++ b/packages/ui-components/src/Page.scss
@@ -21,11 +21,11 @@
   font-size: 24px;
   line-height: 28px;
   font-weight: 500;
-  color: #333333;
+  color: var(--text-color-primary);
 }
 
 .aca-page__title {
-  margin: 32px 0 24px 0;
+  margin: 32px 0 40px 0;
 }
 
 .aca-page__content {
