--- a/packages/ui-components/src/styles/variables.scss
+++ b/packages/ui-components/src/styles/variables.scss
@@ -8,7 +8,7 @@ $color-primary-hover: #1b4af3;
 $color-primary-active: #0c30ae;
 
 $color-white: #ffffff;
-$color-black: #333333;
+$color-blue: var(--text-color-primary);
 $color-gray: #666666;
 
 $platform-background-color: #f8f9fd;
