--- a/packages/page-deposit/src/components/InformationCard.module.scss
+++ b/packages/page-deposit/src/components/InformationCard.module.scss
@@ -49,7 +49,7 @@
   margin-bottom: 8px;
   font-size: 14px;
   line-height: 16px;
-  color: #999999;
+  color: var(--text-color-second);
 }
 
 .listContent {
