--- a/packages/page-homa/src/components/StakingConsole.module.scss
+++ b/packages/page-homa/src/components/StakingConsole.module.scss
@@ -3,7 +3,7 @@
   .notice {
     font-size: 16px;
     line-height: 19px;
-    color: #999999;
+    color: var(--text-color-second);
   }
 
   .txBtn {
@@ -19,7 +19,7 @@
     padding-right: 0;
 
     & :global(.aca-list--label) {
-      color: #999999;
+      color: var(--text-color-second);
     }
   }
 }
