--- a/packages/page-loan/src/components/CreateOverview.module.scss
+++ b/packages/page-loan/src/components/CreateOverview.module.scss
@@ -16,7 +16,7 @@
 
     font-size: 16px;
     line-height: 19px;
-    color: #333333;
+    color: var(--text-color-primary);
 
     &:first-child {
       border-right: 1px solid #ecf0f2;
