--- a/packages/page-wallet/src/components/CrossChainConsole.module.scss
+++ b/packages/page-wallet/src/components/CrossChainConsole.module.scss
@@ -36,14 +36,14 @@
       font-size: 16px;
       line-height: 24px;
       font-weight: 500;
-      color: #333333;
+      color: var(--text-color-primary);
     }
 
     & > span:nth-child(2) {
       display: block;
       font-size: 14px;
       line-height: 21px;
-      color: #999999;
+      color: var(--text-color-second);
     }
   }
 }
