--- a/packages/page-wallet/src/components/WalletBalance.module.scss
+++ b/packages/page-wallet/src/components/WalletBalance.module.scss
@@ -68,14 +68,14 @@
   .name {
     font-size: 16px;
     line-height: 24px;
-    color: #333333;
+    color: var(--text-color-primary);
     font-weight: 400;
   }
 
   .fullname {
     font-size: 14px;
     line-height: 16px;
-    color: #999999;
+    color: var(--text-color-second);
   }
 }
 
@@ -95,7 +95,7 @@
   .amount {
     font-size: 14px;
     line-height: 16px;
-    color: #999999;
+    color: var(--text-color-second);
   }
 }
 
