--- a/packages/page-wallet/src/components/crosschain/RenBtc.module.scss
+++ b/packages/page-wallet/src/components/crosschain/RenBtc.module.scss
@@ -51,7 +51,7 @@
       border-bottom: 1px solid #e9e9e9;
       font-size: 16px;
       line-height: 19px;
-      color: #333333;
+      color: var(--text-color-primary);
 
       &::after {
         position: absolute;
@@ -89,7 +89,7 @@
       padding: 20px 0;
       font-size: 16px;
       line-height: 19px;
-      color: #333333;
+      color: var(--text-color-primary);
 
       border-color: #E9E9E9;
     }
