--- a/packages/react-components/src/ApiStatus.module.scss
+++ b/packages/react-components/src/ApiStatus.module.scss
@@ -3,7 +3,7 @@
 .root {
   position: relative;
   font-size: 16px;
-  color: #333333;
+  color: var(--text-color-primary);
   padding-left: 20px;
   transition: background 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
 
