--- a/packages/react-components/src/TransferModal.module.scss
+++ b/packages/react-components/src/TransferModal.module.scss
@@ -83,13 +83,13 @@
       font-size: 16px;
       line-height: 24px;
       font-weight: 400;
-      color: #333333;
+      color: var(--text-color-primary);
     }
 
     .fullName {
       font-size: 14px;
       line-height: 21px;
-      color: #999999;
+      color: var(--text-color-second);
     }
 
     .selected {
