--- a/packages/react-components/src/WalletBalance.module.scss
+++ b/packages/react-components/src/WalletBalance.module.scss
@@ -39,7 +39,7 @@
     left: 0;
     font-size: 14px;
     line-height: 16px;
-    color: #333333;
+    color: var(--text-color-primary);
   }
 
   .balance {
@@ -52,7 +52,7 @@
   .amount {
     font-size: 16px;
     line-height: 19px;
-    color: #999999;
+    color: var(--text-color-second);
     white-space: nowrap;
   }
 
