--- a/packages/ui-components/src/Card.module.scss
+++ b/packages/ui-components/src/Card.module.scss
@@ -18,7 +18,7 @@
   display: flex;
   justify-content: space-between;
   padding: 20px 24px;
-  color: $color-black;
+  color: var(--text-color-primary);
   font-size: 18px;
   line-height: 21px;
   font-weight: 500;
@@ -26,7 +26,7 @@
   .extra {
     font-size: 16px;
     font-weight: normal;
-    color: #999999;
+    color: var(--text-color-second);
   }
 
   &.divider {
