--- a/packages/ui-components/src/Dialog.scss
+++ b/packages/ui-components/src/Dialog.scss
@@ -18,7 +18,7 @@
     border: none;
     font-size: 24px;
     line-height: 28px;
-    color: #333333;
+    color: var(--text-color-primary);
     padding-bottom: 0;
   }
 }
