--- a/packages/ui-components/src/Dropdown.module.scss
+++ b/packages/ui-components/src/Dropdown.module.scss
@@ -47,7 +47,7 @@
 
 .root.border {
   border-radius: 13px;
-  border: 1px solid $color-primary;
+  border: 1px solid var(--color-primary);
   background: #ffffff;
 
   &:hover {
@@ -77,7 +77,7 @@
     padding: 0 0 0 12px;
     font-size: 16px;
     line-height: 19px;
-    color: $color-primary;
+    color: var(--color-primary);
 
     & > svg {
       margin-right: 8px;
@@ -113,7 +113,7 @@
     align-items: center;
     padding: 0 12px;
     height: 64px;
-    color: $color-primary;
+    color: var(--color-primary);
 
     & > svg {
       margin-right: 8px;
