--- a/packages/ui-components/src/Input.module.scss
+++ b/packages/ui-components/src/Input.module.scss
@@ -23,7 +23,7 @@
   }
 
   &.error {
-    border-color: #ff5500 !important;
+    border-color: var(--color-error) !important;
   }
 
   .maxBtn {
@@ -42,7 +42,7 @@
     top: -36px;
     right: 0;
     padding: 4px 8px;
-    background: #ff5500;
+    background: var(--color-error);
     border-radius: 4px;
     font-size: 12px;
     line-height: 16px;
@@ -62,7 +62,7 @@
       right: 18px;
       border-left: 4px solid transparent;
       border-right: 4px solid transparent;
-      border-top: 4px solid #ff5500;
+      border-top: 4px solid var(--color-error);
     }
   }
 }
