--- a/packages/ui-components/src/Loading.module.scss
+++ b/packages/ui-components/src/Loading.module.scss
@@ -45,7 +45,7 @@ $loader-width-small: 2px;
       box-sizing: border-box;
       background: inherit;
       border-radius: inherit;
-      border: $loader-width solid $color-primary;
+      border: $loader-width solid var(--color-primary);
       border-top-color: transparent;
       border-left-color: transparent;
       border-bottom-color: transparent;
