--- a/packages/ui-components/src/NumberInput.scss
+++ b/packages/ui-components/src/NumberInput.scss
@@ -7,10 +7,10 @@
 
   font-size: 24px;
   line-height: 29px;
-  color: #333333;
+  color: var(--text-color-primary);
   text-overflow: ellipsis;
 
   &::placeholder-shown {
-    color: #999999;
+    color: var(--text-color-second);
   }
 }
