add emergeency shutdown

--- a/packages/react-components/src/format/format.module.scss
+++ b/packages/react-components/src/format/format.module.scss
@@ -5,6 +5,10 @@
 .number, .balance {
   white-space: nowrap;
 
+  .decimal {
+    // font-size: 70%;
+  }
+
   &:global(.primary) {
     color: var(--color-primary);
   }
