--- a/packages/page-loan/src/components/emergency-shutdown/LockPrices.module.scss
+++ b/packages/page-loan/src/components/emergency-shutdown/LockPrices.module.scss
@@ -25,9 +25,27 @@
     justify-content: space-between;
   }
 
-  .price {
+  .priceContent {
     display: flex;
     justify-content: space-between;
+  }
+
+  .assetName {
+    font-size: 16px;
+    line-height: 24px;
+    color: #333333;
+  }
+
+  .price {
+    font-size: 20px;
+    line-height: 24px;
+    color: #000000;
+  }
+
+  .fullname {
+    color: #999999;
+    font-size: 14px;
+    line-height: 14px;
   }
 }
 
