--- a/packages/page-loan/src/components/emergency-shutdown/Controller.module.scss
+++ b/packages/page-loan/src/components/emergency-shutdown/Controller.module.scss
@@ -13,6 +13,12 @@
       transform: translate3d(-60px, 0, 0);
     }
   }
+
+  &.hasPrevious.signlePrevious {
+    .previous {
+      transform: none;
+    }
+  }
 }
 
 .previous {
