--- a/packages/react-components/src/Token.module.scss
+++ b/packages/react-components/src/Token.module.scss
@@ -33,8 +33,10 @@
 }
 
 .icon {
+  flex-grow: 0;
+  flex-shrink: 0;
   margin-right: 12px;
-  flex: 0 0 42px;
+  width: 42px;
   height: 42px;
   border-radius: 50%;
   background: #ffffff;
