--- a/packages/ui-components/src/Page.scss
+++ b/packages/ui-components/src/Page.scss
@@ -32,6 +32,12 @@
   margin: 32px 0 40px 0;
 }
 
+.page-title--breadcrumb-item {
+  font-size: 20px;
+  margin-left: 12px;
+  font-weight: normal;
+}
+
 .aca-page__content {
   margin-top: 16px;
 
